<resources>
    <!--Main strings-->
    <string name="app_name">PTSD Assistant</string>
    <string name="welcome_message">Welcome Back</string>
    <string name="reporting">Self Reporting Survey</string>
    <string name="spotify">Spotify Meditation</string>
    <string name="games">Relaxing Game</string>
    <string name="maps">Find Help Near Me</string>
    <string name="streak">You\'re on a %1$d day streak!</string>
    <string name="bad_mood">Not Great</string>
    <string name="med_mood">Could Be Better</string>
    <string name="good_mood">Great</string>
    <string name="feeling">How\'re you feeling?</string>

    <!--Spotify strings-->
    <!--Map strings-->
    <!--Contact strings-->
    <string name="important_contacts">Important Contacts</string>
    <string name="other_text">Calming Activities</string>
    <string name="vet_crisis_hotline"><a href="https://www.veteranscrisisline.net/"> Veteran Crisis Hotline:</a> \n call : 1–800–273–8255  press 1 \n or Text 838255</string>
    <string name="support_groups"><a href="https://militarysupportgroups.org/home/">Military Support Groups Of America</a></string>
    <string name="national_center_for_PTSD"><a href="https://www.veteranscrisisline.net/">National Center for PTSD:</a> (802) 296–6300</string>
    <string name="wounded_warrior"><a href="https://www.woundedwarriorproject.org/programs">Wounded Warrior Project:</a> (888) 997–2586</string>
    <string name="samhsa"><a href='https://www.samhsa.gov/'>Substance Abuse and Mental Health Services Administration: </a> (1-877-726-4727) </string>
    <string name="ptsdunited"><a href='https://ptsdunited.org/'>PTSD United </a></string>
    <string name="nami"><a href="www.nami.org/veterans">National Alliance of Mental Illness:</a> (703) 524-7600</string>
    <string name="yoga_text"><a href="https://www.veteranscrisisline.net/">Yoga Instruction</a> </string>


    <!--Game strings-->
    <string name="game_2_text">Sand Fill</string>
    <string name="game_1_text">Sand Slice</string>
    <string name="games_welcome_message">Welcome to Games</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="location_permission_denied">LOCATION DENIED</string>

</resources>