<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/Theme.Cis400_ptsd"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/streak_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/streak"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/feeling"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bad_mood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/bad_mood"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/med_mood"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/good_mood"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/white"
        app:columnCount="2"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageButton
                android:id="@+id/reporting_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="1.0"
                android:background="@color/cardview_shadow_end_color"
                android:contentDescription="@string/reporting"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:src="@drawable/ic_checklist" />
        </FrameLayout>

        <FrameLayout
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageButton
                android:id="@+id/spotify_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="1.0"
                android:background="@color/cardview_shadow_end_color"
                android:contentDescription="@string/spotify"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:src="@drawable/ic_spotify_logo_without_text" />

        </FrameLayout>

        <FrameLayout
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageButton
                android:id="@+id/game_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".8"
                android:background="@color/cardview_shadow_end_color"
                android:contentDescription="@string/games"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:src="@drawable/ic_controller" />

        </FrameLayout>

        <FrameLayout
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageButton
                android:id="@+id/maps_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".8"
                android:background="@color/cardview_shadow_end_color"
                android:contentDescription="@string/maps"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:src="@drawable/ic_map_svgrepo_com" />

        </FrameLayout>

    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>