<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/Theme.Cis400_ptsd"
    tools:context=".GameMain">

    <Button
        android:id="@+id/game_2_button"
        android:layout_width="191dp"
        android:layout_height="245dp"
        android:layout_marginTop="243dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="243dp"
        android:backgroundTint="#FF5722"
        android:text="@string/game_2_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/game_1_button"
        android:layout_width="191dp"
        android:layout_height="245dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="243dp"
        android:layout_marginBottom="243dp"
        android:backgroundTint="#FF5722"
        android:text="@string/game_1_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="143dp"
        android:text="@string/games_welcome_message"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>