<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkin_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".CheckIn">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCheckInTitle">

        <TextView
            android:id="@+id/bad_mood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:backgroundTint="@android:color/holo_red_light"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/bad_mood"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mediocre_mood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/med_mood"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/great_mood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:backgroundTint="@android:color/holo_green_light"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/good_mood"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textCheckInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:text="@string/feeling"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@drawable/common_google_signin_btn_text_light_focused"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>